@@ -40,8 +40,8 @@
         <junit5.version>5.9.2</junit5.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>20</maven.compiler.source>
-        <maven.compiler.target>20</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <maven.compiler.fork>true</maven.compiler.fork>
         <maven.compiler.verbose>true</maven.compiler.verbose>
         <maven.compiler.meminitial>2048m</maven.compiler.meminitial>
@@ -57,20 +57,20 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.11.0</version>
                     <configuration>
-                        <source>20</source>
-                        <target>20</target>
-                        <compilerArgs>
-                            --enable-preview
-                        </compilerArgs>
+                        <source>21</source>
+                        <target>21</target>
+<!--                        <compilerArgs>-->
+<!--                            &#45;&#45;enable-preview-->
+<!--                        </compilerArgs>-->
                     </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.2</version>
-                    <configuration>
-                        <argLine>--enable-preview</argLine>
-                    </configuration>
+                    <version>3.1.2</version>
+<!--                    <configuration>-->
+<!--                        <argLine>&#45;&#45;enable-preview</argLine>-->
+<!--                    </configuration>-->
                 </plugin>
             </plugins>
         </pluginManagement>
